# stock-analyzer

./: .gitignore  README.md  pyproject.toml
stock_analyzer/: get_stock_info.py  main.py  plot.py  raw-data.csv  stock_client.py  yahoo_finance_api2_demo.py
tests/: test_stock_analyzer.py
